member_detils added

--- a/how_it_works.html
+++ b/how_it_works.html
@@ -136,8 +136,8 @@
                     <div class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
 
                         <ul class="nav nav-tabs">
-                            <li role="presentation" class="active"><a href="about_card.html">About the card</a></li>
-                            <li role="presentation"><a href="how_it_works.html">How it works?</a></li>
+                            <li role="presentation"><a href="about_card.html">About the card</a></li>
+                            <li role="presentation"  class="active"><a href="how_it_works.html">How it works?</a></li>
                             <li role="presentation"><a href="membership.html">Membership</a></li>
                             <li role="presentation"><a href="customerbenfits.html">Customer Benifits</a></li>
                             <li role="presentation"><a href="tstimonial.html">Customer testimonial</a></li>
@@ -156,7 +156,7 @@
                     <div class="col-md-12 col-sm-12 col-xs-12 no-padding">
                         <div class="about_the_card_img">
                             <img src="images/About%20us.jpg" class="img-responsive" />
-                            <h1 class="header_center">ABOUT THE CARD</h1>
+                            <h1 class="header_center">HOW IT WORKS?</h1>
                         </div>
                     </div>
                 </div>
@@ -164,7 +164,7 @@
         </section>
 
         <!-- About the card -->
-        <section class="about_card_text">
+        <section class="how_it_works">
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12 no-padding">
@@ -178,208 +178,9 @@
                             <p class="about_card_description">
                                 Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat." "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."
                             </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Product count -->
-        <section class="product_count">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-12 no-padding">
-                        <div class="product_count_wrapper">
-                            <div class="col-md-4 col-sm-4 col-xs-12 product_wrapper">
-                                <img src="images/Products.jpg" class="img-responsive" />
-                                <h4>60 Million+</h4>
-                                <p>Products</p>
-                            </div>
-                            <div class="col-md-4 col-sm-4 col-xs-12 product_wrapper">
-                                <img src="images/Seller.jpg" class="img-responsive" />
-                                <h4>3000+</h4>
-                                <p>Sellers</p>
-                            </div>
-                            <div class="col-md-4 col-sm-4 col-xs-12 product_wrapper">
-                                <img src="images/cities.jpg" class="img-responsive" />
-                                <h4>220</h4>
-                                <p>Cities</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Directors -->
-        <section class="directors">
-            <div class="container">
-
-                <h2 class="text-center">BOARD OF DIRECTOR</h2>
-
-                <div class="row">
-                    <div id="directorCarousal" class="carousel slide" data-ride="carousel" data-interval="0"> 
-                        <!-- Wrapper for carousel items -->
-                        <div class="carousel-inner">
-                            <div class="item carousel-item active">
-                                <div class="col-md-3 col-sm-6 col-xs-12 arrival-grid">
-                                    <div class="grid-arr">
-                                        <div class="grid-arrival">
-                                            <figure>		
-                                                <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
-                                                    <div class="grid-img">
-                                                        <img src="images/director.png" class="img-responsive" alt="">
-                                                    </div>		
-                                                </a>		
-                                            </figure>	
-                                        </div>
-
-                                        <div class="description">
-                                            <h3>Dr Raja mohan Ram</h3>
-                                            <p>Director</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-md-3 col-sm-6 col-xs-12 hidden-xs arrival-grid">
-                                    <div class="grid-arr">
-                                        <div class="grid-arrival">
-                                            <figure>		
-                                                <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
-                                                    <div class="grid-img">
-                                                        <img src="images/director.png" class="img-responsive" alt="">
-                                                    </div>		
-                                                </a>		
-                                            </figure>	
-                                        </div>
-
-                                        <div class="description">
-                                            <h3>Dr Rajesh kanna</h3>
-                                            <p>Chief Executive officer</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-3 col-sm-6 col-xs-12  hidden-sm hidden-xs arrival-grid">
-                                    <div class="grid-arr">
-                                        <div class="grid-arrival">
-                                            <figure>		
-                                                <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
-                                                    <div class="grid-img">
-                                                        <img src="images/director.png" class="img-responsive" alt="">
-                                                    </div>		
-                                                </a>		
-                                            </figure>	
-                                        </div>
-
-                                        <div class="description">
-                                            <h3>Dinesh kumar</h3>
-                                            <p>Managing director</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-3 col-sm-6 col-xs-12 hidden-sm hidden-xs arrival-grid">
-                                    <div class="grid-arr">
-                                        <div class="grid-arrival">
-                                            <figure>		
-                                                <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
-                                                    <div class="grid-img">
-                                                        <img src="images/director.png" class="img-responsive" alt="">
-                                                    </div>		
-                                                </a>		
-                                            </figure>	
-                                        </div>
-
-                                        <div class="description text-center">
-                                            <h3>Kumar subramanimiam</h3>
-                                            <p>Chief Operative Officer</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="item carousel-item">
-                                <div class="col-md-3 col-sm-6 col-xs-12 arrival-grid">
-                                    <div class="grid-arr">
-                                        <div class="grid-arrival">
-                                            <figure>		
-                                                <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
-                                                    <div class="grid-img">
-                                                        <img src="images/director.png" class="img-responsive" alt="">
-                                                    </div>		
-                                                </a>		
-                                            </figure>	
-                                        </div>
-
-                                        <div class="description">
-                                            <h3>Dr Raja mohan Ram</h3>
-                                            <p>Director</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-md-3 col-sm-6 col-xs-12 hidden-xs arrival-grid">
-                                    <div class="grid-arr">
-                                        <div class="grid-arrival">
-                                            <figure>		
-                                                <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
-                                                    <div class="grid-img">
-                                                        <img src="images/director.png" class="img-responsive" alt="">
-                                                    </div>		
-                                                </a>		
-                                            </figure>	
-                                        </div>
-
-                                        <div class="description">
-                                            <h3>Dr Rajesh kanna</h3>
-                                            <p>Chief Executive officer</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-3 col-sm-6 col-xs-12  hidden-sm hidden-xs arrival-grid">
-                                    <div class="grid-arr">
-                                        <div class="grid-arrival">
-                                            <figure>		
-                                                <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
-                                                    <div class="grid-img">
-                                                        <img src="images/director.png" class="img-responsive" alt="">
-                                                    </div>		
-                                                </a>		
-                                            </figure>	
-                                        </div>
-
-                                        <div class="description">
-                                            <h3>Dinesh kumar</h3>
-                                            <p>Managing director</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-3 col-sm-6 col-xs-12 hidden-sm hidden-xs arrival-grid">
-                                    <div class="grid-arr">
-                                        <div class="grid-arrival">
-                                            <figure>		
-                                                <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
-                                                    <div class="grid-img">
-                                                        <img src="images/director.png" class="img-responsive" alt="">
-                                                    </div>		
-                                                </a>		
-                                            </figure>	
-                                        </div>
-
-                                        <div class="description text-center">
-                                            <h3>Kumar subramanimiam</h3>
-                                            <p>Chief Operative Officer</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- Carousel controls -->
-                            <a class="carousel-control left carousel-control-prev" href="#directorCarousal" data-slide="prev">
-                                <i class="far fa-chevron-circle-left"></i>
-                            </a>
-                            <a class="carousel-control right carousel-control-next" href="#directorCarousal" data-slide="next">
-                                <i class="far fa-chevron-circle-right"></i>
-                            </a>
+                            <p class="about_card_description">
+                                Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat." "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."
+                            </p>
                         </div>
                     </div>
                 </div>
