--- a/about_card.html
+++ b/about_card.html
@@ -140,7 +140,7 @@
                             <li role="presentation"><a href="how_it_works.html">How it works?</a></li>
                             <li role="presentation"><a href="membership.html">Membership</a></li>
                             <li role="presentation"><a href="customerbenfits.html">Customer Benifits</a></li>
-                            <li role="presentation"><a href="tstimonial.html">Customer testimonial</a></li>
+                            <li role="presentation"><a href="testimonial.html">Customer testimonial</a></li>
                         </ul>
 
                     </div>
