--- a/testimonial.html
+++ b/testimonial.html
@@ -137,10 +137,10 @@
 
                         <ul class="nav nav-tabs">
                             <li role="presentation"><a href="about_card.html">About the card</a></li>
-                            <li role="presentation"  class="active"><a href="how_it_works.html">How it works?</a></li>
+                            <li role="presentation" ><a href="how_it_works.html">How it works?</a></li>
                             <li role="presentation"><a href="membership.html">Membership</a></li>
                             <li role="presentation"><a href="customerbenfits.html">Customer Benifits</a></li>
-                            <li role="presentation"><a href="testimonial.html">Customer testimonial</a></li>
+                            <li role="presentation" class="active"><a href="testimonial.html">Customer testimonial</a></li>
                         </ul>
 
                     </div>
@@ -156,31 +156,72 @@
                     <div class="col-md-12 col-sm-12 col-xs-12 no-padding">
                         <div class="about_the_card_img">
                             <img src="images/About%20us.jpg" class="img-responsive" />
-                            <h1 class="header_center">HOW IT WORKS?</h1>
+                            <h1 class="header_center">CUSTOMER TESTIMONIALS</h1>
                         </div>
                     </div>
-                </div>
+                </div>  
             </div>
         </section>
 
         <!-- About the card -->
-        <section class="how_it_works">
+        <section class="customer_testimonial">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12 no-padding">
-                        <div class="about_the_card_wrapper">
-                            <p class="about_card_head">
-                                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
+                    <div class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
+                        <div class="panel panel-default">
+                            <div class="panel-heading text-center">
+                                <h2><u>SUBMIT YOUR TESTIMONIALS</u></h2>
+                                <p>Your valuable feedback is critical for us and would help us improve us.<br> Please <a href="writereview.html">Click Here</a> to share your experience of working with SUDC Card.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
+                        <div class="reviewPod text-center">
+                            <img class="img-resonsive" src="images/Customerspeak.jpg"/>
+                            <p class="reviw_body">
+                                <sup><i class="fas fa-quote-left"></i></sup>
+                                Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begin..
+                                <sup><i class="fas fa-quote-right"></i></sup>
                             </p>
-                            <p class="about_card_description">
-                                Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat." "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."
+                            <p class="writtenBy">Albert windiesal</p>
+                            <img src="images/line.png" class="img-responsive line" />
+                        </div>
+
+                        <div class="reviewPod text-center">
+                            <img class="img-resonsive" src="images/Customerspeak.jpg"/>
+                            <p class="reviw_body">
+                                <sup><i class="fas fa-quote-left"></i></sup>
+                                Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begin..
+                                <sup><i class="fas fa-quote-right"></i></sup>
                             </p>
-                            <p class="about_card_description">
-                                Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat." "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."
+                            <p class="writtenBy">Albert windiesal</p>
+                            <img src="images/line.png" class="img-responsive line" />
+                        </div>
+                        <div class="reviewPod text-center">
+                            <img class="img-resonsive" src="images/Customerspeak.jpg"/>
+                            <p class="reviw_body">
+                                <sup><i class="fas fa-quote-left"></i></sup>
+                                Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begin..
+                                <sup><i class="fas fa-quote-right"></i></sup>
                             </p>
-                            <p class="about_card_description">
-                                Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat." "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."
+                            <p class="writtenBy">Albert windiesal</p>
+                            <img src="images/line.png" class="img-responsive line" />
+                        </div>
+                        <div class="reviewPod text-center">
+                            <img class="img-resonsive" src="images/Customerspeak.jpg"/>
+                            <p class="reviw_body">
+                                <sup><i class="fas fa-quote-left"></i></sup>
+                                Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begin..
+                                <sup><i class="fas fa-quote-right"></i></sup>
                             </p>
+                            <p class="writtenBy">Albert windiesal</p>
+                            
+                        </div>
+                        <div class="view_more text-center">
+                          <a href="viewmore.html" class="btn btn-primary">View more +</a>
                         </div>
                     </div>
                 </div>
