--- a/about_card.html
+++ b/about_card.html
@@ -92,7 +92,7 @@
                 <div class="search-sec">
                     <div class="container">
                         <div class="row">
-                            <div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
+                            <div class="col-md-12 col-sm-12 col-xs-12">
                                 <div class="row">
                                     <div class="form-section">
                                         <form action="#" method="post" class="form-inline">
@@ -116,7 +116,7 @@
                                             </div>
                                             <div class="col-md-2 col-sm-12 col-xs-2 submit_col">
                                                 <div class="form-group sub_but">
-                                                    <button type="submit" class="btn"><span>Find me shop</span></button>
+                                                    <button type="submit" class="btn"><span>Find Me Shop</span></button>
                                                 </div>
                                             </div>
                                         </form>
@@ -133,14 +133,14 @@
         <section class="submenu">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
 
                         <ul class="nav nav-tabs">
-                            <li role="presentation" class="active"><a href="about_card.html">About the card</a></li>
+                            <li role="presentation" class="active"><a href="about_card.html">About The Card</a></li>
                             <li role="presentation"><a href="how_it_works.html">How it works?</a></li>
                             <li role="presentation"><a href="membership.html">Membership</a></li>
                             <li role="presentation"><a href="customerbenfits.html">Customer Benifits</a></li>
-                            <li role="presentation"><a href="testimonial.html">Customer testimonial</a></li>
+                            <li role="presentation"><a href="testimonial.html">Customer Testimonial</a></li>
                         </ul>
 
                     </div>
@@ -188,7 +188,7 @@
         <section class="product_count">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-12 no-padding">
+                    <div class="col-md-8 col-md-offset-2 col-sm-4 col-sm-offset-4 col-xs-12 no-padding">
                         <div class="product_count_wrapper">
                             <div class="col-md-4 col-sm-4 col-xs-12 product_wrapper">
                                 <img src="images/Products.jpg" class="img-responsive" />
