After mani correct

--- a/testimonial.html
+++ b/testimonial.html
@@ -150,7 +150,7 @@
 
 
         <!-- About the card -->
-        <section class="about_the_card no-padding">
+        <section class="about_the_card testimonial no-padding">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12 no-padding">
@@ -167,7 +167,7 @@
         <section class="customer_testimonial">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
+                    <div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
                         <div class="panel panel-default">
                             <div class="panel-heading text-center">
                                 <h2><u>SUBMIT YOUR TESTIMONIALS</u></h2>
@@ -178,7 +178,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
+                    <div class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
                         <div class="reviewPod text-center">
                             <img class="img-resonsive" src="images/Customerspeak.jpg"/>
                             <p class="reviw_body">
@@ -218,10 +218,20 @@
                                 <sup><i class="fas fa-quote-right"></i></sup>
                             </p>
                             <p class="writtenBy">Albert windiesal</p>
-                            
+                            <img src="images/line.png" class="img-responsive line" />
+                        </div>
+                        <div class="reviewPod text-center">
+                            <img class="img-resonsive" src="images/Customerspeak.jpg"/>
+                            <p class="reviw_body">
+                                <sup><i class="fas fa-quote-left"></i></sup>
+                                Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begin..
+                                <sup><i class="fas fa-quote-right"></i></sup>
+                            </p>
+                            <p class="writtenBy">Albert windiesal</p>
+
                         </div>
                         <div class="view_more text-center">
-                          <a href="viewmore.html" class="btn btn-primary">View more +</a>
+                            <a href="viewmore.html" class="btn btn-primary">View more +</a>
                         </div>
                     </div>
                 </div>
