--- a/how_it_works.html
+++ b/how_it_works.html
@@ -85,14 +85,14 @@
             </div>
         </header>
 
-        <section class="menu_other_pages">
+         <section class="menu_other_pages">
             <div class="container">
 
                 <!-- search section comes here -->
                 <div class="search-sec">
                     <div class="container">
                         <div class="row">
-                            <div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
+                            <div class="col-md-12 col-sm-12 col-xs-12">
                                 <div class="row">
                                     <div class="form-section">
                                         <form action="#" method="post" class="form-inline">
@@ -116,7 +116,7 @@
                                             </div>
                                             <div class="col-md-2 col-sm-12 col-xs-2 submit_col">
                                                 <div class="form-group sub_but">
-                                                    <button type="submit" class="btn"><span>Find me shop</span></button>
+                                                    <button type="submit" class="btn"><span>Find Me Shop</span></button>
                                                 </div>
                                             </div>
                                         </form>
@@ -128,7 +128,7 @@
                 </div>
             </div>
         </section>
-
+        
         <!-- Sub mennu section-->
         <section class="submenu">
             <div class="container">
@@ -137,7 +137,7 @@
 
                         <ul class="nav nav-tabs">
                             <li role="presentation"><a href="about_card.html">About the card</a></li>
-                            <li role="presentation"  class="active"><a href="how_it_works.html">How it works?</a></li>
+                            <li role="presentation"><a href="how_it_works.html">How it works?</a></li>
                             <li role="presentation"><a href="membership.html">Membership</a></li>
                             <li role="presentation"><a href="customerbenfits.html">Customer Benifits</a></li>
                             <li role="presentation"><a href="testimonial.html">Customer testimonial</a></li>
