--- a/customerbenfits.html
+++ b/customerbenfits.html
@@ -92,7 +92,7 @@
                 <div class="search-sec">
                     <div class="container">
                         <div class="row">
-                            <div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
+                            <div class="col-md-12 col-sm-12 col-xs-12">
                                 <div class="row">
                                     <div class="form-section">
                                         <form action="#" method="post" class="form-inline">
@@ -116,7 +116,7 @@
                                             </div>
                                             <div class="col-md-2 col-sm-12 col-xs-2 submit_col">
                                                 <div class="form-group sub_but">
-                                                    <button type="submit" class="btn"><span>Find me shop</span></button>
+                                                    <button type="submit" class="btn"><span>Find Me Shop</span></button>
                                                 </div>
                                             </div>
                                         </form>
@@ -129,25 +129,6 @@
             </div>
         </section>
 
-        <!-- Sub mennu section-->
-        <section class="submenu">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
-
-                        <ul class="nav nav-tabs">
-                            <li role="presentation"><a href="about_card.html">About the card</a></li>
-                            <li role="presentation" ><a href="how_it_works.html">How it works?</a></li>
-                            <li role="presentation"><a href="membership.html">Membership</a></li>
-                            <li role="presentation" class="active"><a href="customerbenfits.html">Customer Benifits</a></li>
-                            <li role="presentation"><a href="testimonial.html">Customer testimonial</a></li>
-                        </ul>
-
-                    </div>
-                </div>
-            </div>  
-        </section>
-
 
         <!-- About the card -->
         <section class="about_the_card no-padding">
@@ -156,6 +137,15 @@
                     <div class="col-md-12 col-sm-12 col-xs-12 no-padding">
                         <div class="about_the_card_img">
                             <img src="images/About%20us.jpg" class="img-responsive" />
+                            <div class="submenu">
+                                <ul class="nav nav-tabs">
+                                    <li role="presentation"><a href="about_card.html">About the card</a></li>
+                                    <li role="presentation"><a href="how_it_works.html">How it works?</a></li>
+                                    <li role="presentation"><a href="membership.html">Membership</a></li>
+                                    <li role="presentation" class="active"><a href="customerbenfits.html">Customer Benifits</a></li>
+                                    <li role="presentation"><a href="testimonial.html">Customer testimonial</a></li>
+                                </ul>
+                            </div>
                             <h1 class="header_center">CUSTOMER BENIFITS</h1>
                         </div>
                     </div>
