--- a/how_it_works.html
+++ b/how_it_works.html
@@ -85,7 +85,7 @@
             </div>
         </header>
 
-         <section class="menu_other_pages">
+        <section class="menu_other_pages">
             <div class="container">
 
                 <!-- search section comes here -->
@@ -128,25 +128,6 @@
                 </div>
             </div>
         </section>
-        
-        <!-- Sub mennu section-->
-        <section class="submenu">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
-
-                        <ul class="nav nav-tabs">
-                            <li role="presentation"><a href="about_card.html">About the card</a></li>
-                            <li role="presentation"><a href="how_it_works.html">How it works?</a></li>
-                            <li role="presentation"><a href="membership.html">Membership</a></li>
-                            <li role="presentation"><a href="customerbenfits.html">Customer Benifits</a></li>
-                            <li role="presentation"><a href="testimonial.html">Customer testimonial</a></li>
-                        </ul>
-
-                    </div>
-                </div>
-            </div>  
-        </section>
 
 
         <!-- About the card -->
@@ -156,6 +137,15 @@
                     <div class="col-md-12 col-sm-12 col-xs-12 no-padding">
                         <div class="about_the_card_img">
                             <img src="images/About%20us.jpg" class="img-responsive" />
+                            <div class="submenu">
+                                <ul class="nav nav-tabs">
+                                    <li role="presentation"><a href="about_card.html">About the card</a></li>
+                                    <li role="presentation" class="active"><a href="how_it_works.html">How it works?</a></li>
+                                    <li role="presentation"><a href="membership.html">Membership</a></li>
+                                    <li role="presentation"><a href="customerbenfits.html">Customer Benifits</a></li>
+                                    <li role="presentation"><a href="testimonial.html">Customer testimonial</a></li>
+                                </ul>
+                            </div>
                             <h1 class="header_center">HOW IT WORKS?</h1>
                         </div>
                     </div>
