--- a/product.html
+++ b/product.html
@@ -132,7 +132,7 @@
                                                 </div>
                                                 <div class="col-md-2 col-sm-12 col-xs-6">
                                                     <div class="form-group sub_but">
-                                                        <button type="submit" class="btn">Find me shop</button>
+                                                        <button type="submit" class="btn">Find Me Shop</button>
                                                     </div>
                                                 </div>
                                             </form>
