--- a/about_card.html
+++ b/about_card.html
@@ -129,25 +129,6 @@
             </div>
         </section>
 
-        <!-- Sub mennu section-->
-        <section class="submenu">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 col-sm-12 col-xs-12">
-
-                        <ul class="nav nav-tabs">
-                            <li role="presentation" class="active"><a href="about_card.html">About The Card</a></li>
-                            <li role="presentation"><a href="how_it_works.html">How it works?</a></li>
-                            <li role="presentation"><a href="membership.html">Membership</a></li>
-                            <li role="presentation"><a href="customerbenfits.html">Customer Benifits</a></li>
-                            <li role="presentation"><a href="testimonial.html">Customer Testimonial</a></li>
-                        </ul>
-
-                    </div>
-                </div>
-            </div>  
-        </section>
-
 
         <!-- About the card -->
         <section class="about_the_card no-padding">
@@ -156,6 +137,15 @@
                     <div class="col-md-12 col-sm-12 col-xs-12 no-padding">
                         <div class="about_the_card_img">
                             <img src="images/About%20us.jpg" class="img-responsive" />
+                            <div class="submenu">
+                                <ul class="nav nav-tabs">
+                                    <li role="presentation" class="active"><a href="about_card.html">About the card</a></li>
+                                    <li role="presentation"><a href="how_it_works.html">How it works?</a></li>
+                                    <li role="presentation"><a href="membership.html">Membership</a></li>
+                                    <li role="presentation"><a href="customerbenfits.html">Customer Benifits</a></li>
+                                    <li role="presentation"><a href="testimonial.html">Customer testimonial</a></li>
+                                </ul>
+                            </div>
                             <h1 class="header_center">ABOUT THE CARD</h1>
                         </div>
                     </div>
