--- a/v4/product.html
+++ b/v4/product.html
@@ -125,7 +125,7 @@
                                     </div>
                                     <div class="col-md-2 col-sm-6 col-xs-6">
                                        <div class="form-group sub_but">
-                                          <button type="submit" class="btn">Find me shop</button>
+                                          <button type="submit" class="btn">Find Me Shop</button>
                                        </div>
                                     </div>
                                  </form>
